# Estrutura_projeto

./: .flake8  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  ultis.py
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: extract.py  load.py  trasnform.py
app/pipeline/etl/: extract.py  load.py  trasnform.py
app/ultis/: ultis.py
data/: main.py
data/output/: output.xlsx
test/: test_pipilne*.py  test_unitario*.py
