[project]
name = "estrutura-projeto"
version = "0.1.0"
description = "Como comecar a estrutura um projeto de dados"
authors = [
    {name = "Matheus",email = "matheusssousaribeiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandera (>=0.24.0,<0.25.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
